# LumosReferenceTesting

./: .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  TODO
src/applications/simple/: CMakeLists.txt  binary_serializer.hpp  bounds_checker.hpp  main.cpp
src/reference_testing/: binary_serializer.h  bounds_checker.h  reference_testing.h
src/test/: CMakeLists.txt  application_test.cpp  test.cpp  test_2d_corridor.cpp  test_condition_functions.cpp  test_interpolate_at_time.cpp  test_is_within_bounds.cpp  test_linear_interpolate.cpp  test_mean_difference.cpp  test_threshold_functions.cpp  test_variance_threshold.cpp
